--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /temp_for_test
 /edgedriver_win64
 /__pycache__
-examtopic.ipynb
 page_content_for_debugging.txt
+examtopic.ipynb
+static_page_parsing.ipynb
